[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "aria"
version = "0.1.0"
description = "A library for various automated reasoning tasks."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "rainoftime", email = "rainoftime@gmail.com" }]
urls = { Homepage = "https://github.com/ZJU-PL/aria" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "PySMT==0.9.0",
    "z3-solver==4.12.0",
    "python-sat==0.1.8.dev1",
    "pyapproxmc==4.1.24",
    "six>=1.16.0",
    "psutil~=5.9.0",
    #"pytest~=7.1.0",
    "pytest-cov",
    "tqdm==4.65.0",
    "requests==2.32.3",
    "setuptools~=70.0.0",
    "lark==1.2.2",
    "multipledispatch==1.0.0",
    "toolz==1.0.0",
    "numpy",
    "hypothesis",
]

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = []
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.scripts]
aria-smt-server = "aria.cli.smt_server:main"
aria-pyomt = "aria.cli.pyomt:main"
aria-mc = "aria.cli.mc:main"
aria-efsmt = "aria.cli.efsmt:main"
aria-fmldoc = "aria.cli.fmldoc:main"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Configure stub paths
mypy_path = "stubs"

# Ignore missing imports for z3 since we have custom stubs
[[tool.mypy.overrides]]
module = "z3"
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
log_cli = true
log_cli_level = "CRITICAL"
log_cli_format = "%(message)s"
log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = ["ignore::RuntimeWarning:unittest.case:597"]
