[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "cnfsimplifier-rs"
version = "0.1.0"
description = "Rust CNF simplifier - Python extension for aria"
requires-python = ">=3.8"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "cnfsimplifier_rs"
